# GHLIntranetV2

./: Cargo.toml  index.html
assets/: screen.css
src/app/: main.rs
src/lib/: components.rs  data.rs  domain.rs  lib.rs  routes.rs  time.rs
src/lib/components/: altsolnsearch.rs  footer.rs  header.rs  navigation.rs
src/lib/data/: interpretations.rs
src/lib/domain/: altsolns.rs
src/lib/routes/: certifiedprofessional.rs  home.rs  informationtech.rs  knowledge.rs  lunchandlearns.rs  masstimber.rs  router.rs  technicalreferences.rs  workload.rs
