[package]
name = "ghl-intranet-sycamore-v3"
authors = ["Jeffery D Mitchell, <jdm@ghl.ca>"]
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ghl_intranet_sycamore_v3_app"
path = "src/app/main.rs"

[lib]
name = "ghl_intranet_sycamore_v3_lib"
path = "src/lib/lib.rs"

[dependencies]
sycamore = { version = "0.8", features = ["suspense"] }
sycamore-router = "0.8"
chrono = "0.4.22"
reqwasm = "0.5.0"
serde = { version = "1", features = ["derive"]}
